<resources>
    <string name="app_name">E-Rem</string>
    <string name="title_course">Title of the course</string>
    <string name="description_course">Description of your course</string>
    <string name="add_course">Add Course</string>
    <string name="image_course_description">Image course</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="location">Location</string>
    <string name="school_name">School Name</string>
    <string name="register">Register</string>
    <string name="click_to_add_new_course_description">Click to Add new Course</string>
    <string name="type_your_question_here">Type your question here!</string>
    <string name="points">Points</string>
    <string name="add_an_option">Add an option</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="correct">Correct?</string>
</resources>